updated process payments (for testing)